    Closes: #737476
  * Windows: It's now safe to run multiple git-annex processes concurrently
    on Windows; the lock files have been sorted out.
  * Windows: Avoid using unix-compat's rename, which refuses to rename
    directories.
  * Windows: Fix deletion of repositories by test suite and webapp.
  * Windows: Test suite 100% passes again.
  * Windows: Fix bug in symlink calculation code.
  * Fix initremote with encryption=pubkey to work with S3, glacier, webdav,
    and external special remotes.
  * Android: Avoid crashing when unable to set file mode for ssh config file
    due to Android filesystem horribleness.
  * Avoid building with DAV 0.6 which is badly broken (see #737902).
  * Fix build on platforms not supporting the webapp.

 -- Joey Hess <joeyh@debian.org>  Tue, 28 Jan 2014 13:57:19 -0400

git-annex (5.20140127) unstable; urgency=medium

  * sync --content: New option that makes the content of annexed files be
    transferred. Similar to the assistant, this honors any configured
    preferred content expressions.
  * Remove --json option from commands not supporting it.
  * status: Support --json.
  * list: Fix specifying of files to list.
  * Allow --all to be mixed with matching options like --copies and --in
    (but not --include and --exclude).
  * numcopies: New command, sets global numcopies value that is seen by all
    clones of a repository.
  * The annex.numcopies git config setting is deprecated. Once the numcopies
    command is used to set the global number of copies, any annex.numcopies
    git configs will be ignored.
  * assistant: Make the prefs page set the global numcopies.
  * Add lackingcopies, approxlackingcopies, and unused to
    preferred content expressions.
  * Client, transfer, incremental backup, and archive repositories
    now want to get content that does not yet have enough copies.
  * Client, transfer, and source repositories now do not want to retain
    unused file contents.