@@ -6,9 +6,18 @@ internal error, /home/michele/assistannex is not absolute
 
 ### What steps will reproduce the problem?
 
-create a transfer repository on a usb drive (from windows) merge it with a repository on linux, try to merge it on another target windows machine
+create a transfer repository on a usb drive (from windows) merge it with a
+repository on linux, try to merge it on another target windows machine
 
 ### What version of git-annex are you using? On what operating system?
 
 git-annex version 5.20140128-g29aea74
 
+> I'm not able to follow the steps to reproduce this, but I think 
+> I see what the problem is. `isAbsolute` on windows does not think that
+> unix-style path is absolute. Such a path can appear in a remote of a git
+> repository, particularly if part of that repository was set up on a
+> non-Windows system. While the remote won't be usable on Windows with a
+> path like that, git-annex should not choke on the path either.
+> I have fixed the code to deal with this.
+> [[done]] --[[Joey]] 
